feat: start cycle
